# one-million-checkboxes

./: docker-compose.yaml
go-server/: go.mod  go.sum  main.go
go-server/controllers/checkboxes/: user-controller.go  user_controller.go
go-server/docs/: docs.go  swagger.json  swagger.yaml
go-server/models/: current_response.go  update-request.go  update-response.go  update_request.go  update_response.go
go-server/routes/: routes.go
go-server/services/: services.go
go-server/services/bit_sets/: bit_sets.go
go-server/services/bitsets/: bitsets.go
go-server/services/redis/: redis.go
go-server/tests/: bitsets_test.go
redis-data/: dump.rdb
rust-server/: Cargo.toml
rust-server/src/: main.rs
rust-server/src/services/: redis.rs
