[package]
name = "one-millon-checkbox"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
redis = "0.27.0"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
# bit_set = "0.7"
bit-set = "0.8.0"